# pwhl-stats

./: .gitignore  README.md  db_schema.txt  docker-compose.yaml  pyproject.toml
backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py  settings.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 0106a8906cec_add_unique_id_to_goalie_stats.py  051a62415528_add_unique_id_to_standings.py  2577ddb3f5d7_add_unique_id_to_roster.py  379bb8544db1_add_start_time_to_games.py  3a85a86c85e3_create_goalie_stats_table.py  7bc74a42204b_create_standings_table.py  84056ef22437_create_roster_table.py  8b9fe4cdb73f_create_games_table.py  8cfa6ee2eb62_create_seasons_table.py  9c57a0409678_create_players_table.py  a490390c8d65_add_season_type_to_seasons.py  a7690bb0da98_add_playoff_series_id_to_games.py  abc115a07137_create_skater_stats_table.py  c943fd8f64a7_add_regulation_wins_to_standings.py  cb07011b8953_create_game_periods_table.py  dc89a9396b1e_create_teams_table.py  (+2 more)
backend/ingestions/: db.py  games.py  goalie_stats.py  players.py  playoffs.py  roster.py  run.py  seasons.py  skater_stats.py  standings.py  teams.py
backend/live/: firebase.py  poller.py
backend/queries/: games.py  players.py  playoffs.py  seasons.py  standings.py  stats.py  teams.py
backend/routers/: games.py  live.py  players.py  playoffs.py  seasons.py  standings.py  stats.py  teams.py
backend/tests/: test_admin.py  test_games.py  test_goalie_stats.py  test_players.py  test_playoffs.py  test_skater_stats.py  test_standings.py  test_teams.py
frontend/: README.md  (+3 more)
(+32 files in other folders)
