[project]
name = "backend"
version = "0.1.0"
description = "PWHL API for collecting and querying data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]
