[project]
name = "backend"
version = "0.1.0"
description = "PWHL API for collecting and querying data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10,<4",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
